Import changes for FreeBSD as of 5.2.20121209.

--- a/bgpctl/bgpctl.8
+++ b/bgpctl/bgpctl.8
@@ -346,7 +346,7 @@ Show a list of all currently loaded fib routing tables.
 .El
 .Sh FILES
 .Bl -tag -width "/var/run/bgpd.sockXXX" -compact
-.It Pa /etc/bgpd.conf
+.It Pa %%PREFIX%%/etc/bgpd.conf
 default
 .Xr bgpd 8
 configuration file
