--- a/bgpd/bgpd.8
+++ b/bgpd/bgpd.8
@@ -135,9 +135,9 @@ attribute can be used to influencing the routing behaviour on remote systems.
 .Nm
 is usually started at boot time, and can be enabled by
 setting the following in
-.Pa /etc/rc.conf.local :
+.Pa /etc/rc.conf :
 .Pp
-.Dl bgpd_flags=\&"\&"
+.Dl openbgpd_enable=\&"YES\&"
 .Pp
 See
 .Xr rc 8
@@ -204,7 +204,7 @@ Use
 .Ar file
 as the configuration file,
 instead of the default
-.Pa /etc/bgpd.conf .
+.Pa %%PREFIX%%/etc/bgpd.conf .
 .It Fl n
 Configtest mode.
 Only check the configuration file for validity.
@@ -213,7 +213,7 @@ Produce more verbose output.
 .El
 .Sh FILES
 .Bl -tag -width "/var/run/bgpd.sockXXX" -compact
-.It Pa /etc/bgpd.conf
+.It Pa %%PREFIX%%/etc/bgpd.conf
 default
 .Nm
 configuration file
